--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</head>
 	<body>
 	<button>Mi primer button en git</button>
+	<input type="text" value="">
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/popper.js"></script>
